<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_write">

    <fragment
        android:id="@+id/navigation_write"
        android:name="com.flatplay.mymemories.ui.home.WriteFragment"
        android:label="@string/title_write"
        tools:layout="@layout/fragment_write" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.flatplay.mymemories.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_more"
        android:name="com.flatplay.mymemories.ui.more.MoreFragment"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_more" />

</navigation>